// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TierCard renders correctly with column view 1`] = `
<styled.div
  className=" column"
>
  <Styled(Text)
    color="white"
    size="18px"
    uppercase={true}
    weight={500}
  >
    <FormattedMessage
      defaultMessage="Get Free Crypto"
      id="components.identityverification.tiercard.getfreecrypto"
      values={Object {}}
    />
  </Styled(Text)>
  <styled.div>
    <Styled(Text)
      color="marketing-primary"
      uppercase={true}
    >
      <FormattedMessage
        defaultMessage="Gold Level"
        id="components.identityverification.tiercard.gold"
        values={Object {}}
      />
    </Styled(Text)>
    <styled.div>
      <styled.div>
        <styled.div>
          <Text
            altFont={false}
            capitalize={false}
            color="marketing-secondary"
            cursor="inherit"
            italic={false}
            lineHeight="inherit"
            opacity={1}
            size="32px"
            uppercase={false}
            weight={600}
          >
            $25,000
          </Text>
          <Text
            altFont={false}
            capitalize={false}
            color="textBlack"
            cursor="inherit"
            italic={false}
            lineHeight="inherit"
            opacity={1}
            size="14px"
            style={
              Object {
                "marginTop": "8px",
              }
            }
            uppercase={false}
            weight={500}
          >
            <Text
              altFont={false}
              capitalize={false}
              color="grey700"
              cursor="inherit"
              italic={false}
              lineHeight="inherit"
              opacity={1}
              size="14px"
              uppercase={false}
              weight={400}
            >
              <FormattedMessage
                defaultMessage="Daily Swap Limit"
                id="components.identityverification.tiercard.dailylimit"
                values={Object {}}
              />
            </Text>
          </Text>
          <Text
            altFont={false}
            capitalize={false}
            color="grey400"
            cursor="inherit"
            italic={false}
            lineHeight="inherit"
            opacity={1}
            size="14px"
            style={
              Object {
                "marginTop": "7px",
              }
            }
            uppercase={false}
            weight={500}
          >
            <FormattedMessage
              defaultMessage="Takes {time} min"
              id="components.identityverification.tiercard.timing"
              values={
                Object {
                  "time": "10",
                }
              }
            />
          </Text>
        </styled.div>
        <styled.div>
          <TextGroup
            inline={true}
            key="0"
            nowrap={false}
            style={
              Object {
                "marginBottom": "8px",
              }
            }
          >
            <Text
              altFont={false}
              capitalize={false}
              color="grey400"
              cursor="inherit"
              italic={false}
              lineHeight="inherit"
              opacity={1}
              size="12px"
              uppercase={false}
              weight={400}
            >
              <FormattedMessage
                defaultMessage="Silver Level +"
                id="components.identityverification.tiercard.silverplus"
                values={Object {}}
              />
            </Text>
          </TextGroup>
          <TextGroup
            inline={true}
            key="1"
            nowrap={false}
            style={
              Object {
                "marginBottom": "8px",
              }
            }
          >
            <Text
              altFont={false}
              capitalize={false}
              color="grey700"
              cursor="inherit"
              italic={false}
              lineHeight="inherit"
              opacity={1}
              size="12px"
              uppercase={false}
              weight={400}
            >
              <FormattedMessage
                defaultMessage="Gov't Issued ID"
                id="components.identityverification.tiercard.id"
                values={Object {}}
              />
            </Text>
            <Icon
              color="success"
              cursor={false}
              name="check"
              size="12px"
              style={
                Object {
                  "marginLeft": "5px",
                }
              }
              weight={400}
            />
          </TextGroup>
          <TextGroup
            inline={true}
            key="2"
            nowrap={false}
            style={
              Object {
                "marginBottom": "8px",
              }
            }
          >
            <Text
              altFont={false}
              capitalize={false}
              color="grey700"
              cursor="inherit"
              italic={false}
              lineHeight="inherit"
              opacity={1}
              size="12px"
              style={
                Object {
                  "display": "inline-block",
                  "marginBottom": "26px",
                }
              }
              uppercase={false}
              weight={400}
            >
              <FormattedMessage
                defaultMessage="Portrait Photo"
                id="components.identityverification.tiercard.portraitphoto"
                values={Object {}}
              />
            </Text>
            <Icon
              color="success"
              cursor={false}
              name="check"
              size="12px"
              style={
                Object {
                  "marginLeft": "5px",
                }
              }
              weight={400}
            />
          </TextGroup>
        </styled.div>
      </styled.div>
    </styled.div>
    <Styled(Button)
      className="actionButton"
      data-e2e="continueKycTier2Btn"
      fullwidth={true}
      jumbo={true}
      nature="primary"
      onClick={[Function]}
    >
      <span
        data-e2e="unlockGoldBtn"
      >
        <FormattedMessage
          defaultMessage="Unlock Gold 🥇"
          id="components.identityverification.tiercard.goldctamedal"
          values={Object {}}
        />
      </span>
    </Styled(Button)>
  </styled.div>
</styled.div>
`;

exports[`TierCard renders null w/o showBanner 1`] = `
<styled.div
  className=""
>
  <styled.div>
    <Styled(Text)
      color="marketing-primary"
      uppercase={true}
    >
      <FormattedMessage
        defaultMessage="Silver Level"
        id="components.identityverification.tiercard.silver"
        values={Object {}}
      />
    </Styled(Text)>
    <styled.div>
      <styled.div>
        <styled.div>
          <Text
            altFont={false}
            capitalize={false}
            color="marketing-secondary"
            cursor="inherit"
            italic={false}
            lineHeight="inherit"
            opacity={1}
            size="32px"
            uppercase={false}
            weight={600}
          >
            $1,000
          </Text>
          <Text
            altFont={false}
            capitalize={false}
            color="textBlack"
            cursor="inherit"
            italic={false}
            lineHeight="inherit"
            opacity={1}
            size="14px"
            style={
              Object {
                "marginTop": "8px",
              }
            }
            uppercase={false}
            weight={500}
          >
            <Text
              altFont={false}
              capitalize={false}
              color="grey700"
              cursor="inherit"
              italic={false}
              lineHeight="inherit"
              opacity={1}
              size="14px"
              uppercase={false}
              weight={400}
            >
              <FormattedMessage
                defaultMessage="Annual Swap Limit"
                id="components.identityverification.tiercard.annuallimit"
                values={Object {}}
              />
            </Text>
          </Text>
          <Text
            altFont={false}
            capitalize={false}
            color="grey400"
            cursor="inherit"
            italic={false}
            lineHeight="inherit"
            opacity={1}
            size="14px"
            style={
              Object {
                "marginTop": "7px",
              }
            }
            uppercase={false}
            weight={500}
          >
            <FormattedMessage
              defaultMessage="Takes {time} min"
              id="components.identityverification.tiercard.timing"
              values={
                Object {
                  "time": "3",
                }
              }
            />
          </Text>
        </styled.div>
        <styled.div>
          <TextGroup
            inline={true}
            key="0"
            nowrap={false}
            style={
              Object {
                "marginBottom": "8px",
              }
            }
          >
            <Text
              altFont={false}
              capitalize={false}
              color="grey700"
              cursor="inherit"
              italic={false}
              lineHeight="inherit"
              opacity={1}
              size="12px"
              uppercase={false}
              weight={400}
            >
              <FormattedMessage
                defaultMessage="Verified Email"
                id="components.identityverification.tiercard.email"
                values={Object {}}
              />
            </Text>
          </TextGroup>
          <TextGroup
            inline={true}
            key="1"
            nowrap={false}
            style={
              Object {
                "marginBottom": "8px",
              }
            }
          >
            <Text
              altFont={false}
              capitalize={false}
              color="grey700"
              cursor="inherit"
              italic={false}
              lineHeight="inherit"
              opacity={1}
              size="12px"
              uppercase={false}
              weight={400}
            >
              <FormattedMessage
                defaultMessage="Name"
                id="components.identityverification.tiercard.name"
                values={Object {}}
              />
            </Text>
          </TextGroup>
          <TextGroup
            inline={true}
            key="2"
            nowrap={false}
            style={
              Object {
                "marginBottom": "8px",
              }
            }
          >
            <Text
              altFont={false}
              capitalize={false}
              color="grey700"
              cursor="inherit"
              italic={false}
              lineHeight="inherit"
              opacity={1}
              size="12px"
              uppercase={false}
              weight={400}
            >
              <FormattedMessage
                defaultMessage="Date of Birth"
                id="components.identityverification.tiercard.dob"
                values={Object {}}
              />
            </Text>
          </TextGroup>
          <TextGroup
            inline={true}
            key="3"
            nowrap={false}
            style={
              Object {
                "marginBottom": "8px",
              }
            }
          >
            <Text
              altFont={false}
              capitalize={false}
              color="grey700"
              cursor="inherit"
              italic={false}
              lineHeight="inherit"
              opacity={1}
              size="12px"
              uppercase={false}
              weight={400}
            >
              <FormattedMessage
                defaultMessage="Address"
                id="components.identityverification.tiercard.address"
                values={Object {}}
              />
            </Text>
          </TextGroup>
        </styled.div>
      </styled.div>
    </styled.div>
    <Styled(Button)
      className="actionButton"
      data-e2e="continueKycTier1Btn"
      fullwidth={true}
      jumbo={true}
      nature="primary"
      onClick={[Function]}
    >
      <FormattedMessage
        defaultMessage="Continue"
        id="components.identityverification.tiercard.continue"
        values={Object {}}
      />
    </Styled(Button)>
  </styled.div>
</styled.div>
`;
